--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <div id="header-left">
             <div>
-                <img src="./img/pokemon_n.svg" alt="">
+                <img class="spin-img" src="./img/pokemon_n.svg" alt="">
             </div>
 
-        <h2>Pokedex</h2>    
+        <a href="#">Pokedex</a>    
 
         </div>
 
